--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+.wrapper {
+  display: flex;
+  height: 100vh;
+}
+
 .side-bar{
   background-color: #253141;
   height: 100vh;
