--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -11,10 +11,32 @@
   background-color: #253141;
   height: 100vh;
   width: 300px;
-}
+  &__user-name{
+    background-color: #253141;
+    height: 100px;
+  }
+  &__group-list{
+    background-color: #2f3e51;
+    height: calc(100vh - 100px);
+  }
+}  
+
 
 .chat-main{
   background-color: #ffffff;
   height: 100vh;
   width: calc(100vw - 300px);
+  &__group-info{
+    background-color: #ffffff;
+    border-bottom:1px #eeeeee solid;
+    height: 100px;
+  }
+  &__message-list{
+    background-color: #fafafa;
+    height: calc(100vh - 190px);
+  }
+  &__message-form{
+    background-color: #d2d2d2;
+    height: 190px;
+  }
 }
