--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -14,6 +14,14 @@
   &__user-name{
     background-color: #253141;
     height: 100px;
+    display:flex;
+    align-items:center;
+    .top-items{
+      background-color: #d8d8d8;
+      height: 20px;
+      width: 260px;
+      margin: 0 auto;
+    }
   }
   &__group-list{
     background-color: #2f3e51;
