--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -13,22 +13,41 @@
   width: 300px;
   &__user-name{
     background-color: #253141;
+    color: #ffffff;
     height: 100px;
     display:flex;
     align-items:center;
     .top-items{
-      background-color: #d8d8d8;
+      background-color: #253141;
       height: 20px;
       width: 260px;
       margin: 0 auto;
+      display:flex;
+      justify-content: space-between;
+      line-height: 20px;
+      &__name{
+      }
+      &__icons{
+        height: 20px;
+        width: 60px;
+        background-color: #253141;
+        display: flex;
+        justify-content: flex-end;
+        &__icon{
+          padding-left: 5px;
+        a{
+          color: #ffffff;
+          text-decoration: none;
+        }
+        }
+      }
     }
   }
   &__group-list{
     background-color: #2f3e51;
     height: calc(100vh - 100px);
-  }
-}  
-
+  }  
+}
 
 .chat-main{
   background-color: #ffffff;
