--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,13 +1,19 @@
 .side-bar
   .side-bar__user-name
-    .top-items
-      .top-items__name
+    .side-bar__user-name__top-items
+      .side-bar__user-name__top-items__name
         masa
-      %ul.top-items__icons
-        %li.top-items__icons__icon
-          = link_to "#", class: "icon--btn" do
+      %ul.side-bar__user-name__top-items__icons
+        %li.side-bar__user-name__top-items__icons__icon
+          = link_to "#", class: "icon__btn" do
             = icon('far', 'edit')
-        %li.top-items__icons__icon
-          = link_to "#", class: "icon--btn" do
+        %li.side-bar__user-name__top-items__icons__icon
+          = link_to "#", class: "icon__btn" do
             = icon('fas', 'cog')
   .side-bar__group-list
+    %ul.side-bar__group-list__groups
+      %li.side-bar__group-list__groups__group
+        = link_to "#", class: "side-bar__group-list__groupsgroup__name" do  
+          techchamp
+        %p.side-bar__group-list__groups__group__message まだメッセージはありません
+
