--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -26,6 +26,8 @@
       justify-content: space-between;
       line-height: 20px;
       &__name{
+        font-size: 16px;
+        font-weight: bold;
       }
       &__icons{
         height: 20px;
@@ -37,7 +39,6 @@
           padding-left: 5px;
         a{
           color: #ffffff;
-          text-decoration: none;
         }
         }
       }
@@ -46,22 +47,23 @@
   &__group-list{
     background-color: #2f3e51;
     height: calc(100vh - 100px);
-    &__groups{
+    width: 300px;
+    &__group{
       height: 91px;
-      background-color: red;
-      &__group{
-        a{
-          font-size: 15px;
-          color:#ffffff;
-        }
-          &__group__message{
-          font-size: 11px;
-          color:#ffffff;
-        }
+      font-weight: bold;
+      color:#ffffff;
+      &__name{
+        font-size: 15px;
+        padding: 20px 20px 5px;
+      }
+      &__new-message{
+        font-size: 11px;
+        padding: 0 20px 40px;
       }
     }
   }
 }
+
 
 
 
