add-side-bar__group-list copy

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -15,4 +15,8 @@
       .side-bar__group-list__group
         .side-bar__group-list__group__name techcamp
         .side-bar__group-list__group__new-message まだメッセージがありません
+    = link_to "#" do
+      .side-bar__group-list__group
+        .side-bar__group-list__group__name techcamp
+        .side-bar__group-list__group__new-message まだメッセージがありません
 
