--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -109,6 +109,27 @@
   &__message-list{
     background-color: #fafafa;
     height: calc(100vh - 190px);
+    &__message{
+      padding: 35px 0 0 40px;
+      &__user{
+        display: flex;
+        &__name{
+          color: #333333;
+          font-size: 16px;
+          padding-right: 5px;
+        }
+        &__time{
+          font-size: 12px;
+          color: #999999;
+        }
+      }
+      &__text{
+        font-size: 14px;
+        color: #434a54;
+        padding-top: 12px;
+        padding-bottom: 11px;
+      }
+    }
   }
   &__message-form{
     background-color: #d2d2d2;
