--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,4 +8,14 @@
       = link_to "#" do
         .chat-main__group-info__right__btn Edit
   .chat-main__message-list
+    .chat-main__message-list__message
+      .chat-main__message-list__message__user
+        %p.chat-main__message-list__message__user__name masa
+        %p.chat-main__message-list__message__user__time 2019/11/20(Wed) 17:43:01
+      .chat-main__message-list__message__text おはよう！
+    .chat-main__message-list__message
+      .chat-main__message-list__message__user
+        %p.chat-main__message-list__message__user__name masa
+        %p.chat-main__message-list__message__user__time 2019/11/20(Wed) 17:43:01
+      .chat-main__message-list__message__text おはよう！
   .chat-main__message-form
