--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -11,131 +11,149 @@
   background-color: #253141;
   height: 100vh;
   width: 300px;
-  &__user-name{
+  .side-header{
     background-color: #253141;
     color: #ffffff;
     height: 100px;
     display:flex;
     align-items:center;
-    &__top-items{
-      background-color: #253141;
-      height: 20px;
-      width: 260px;
-      margin: 0 auto;
-      display:flex;
-      justify-content: space-between;
-      line-height: 20px;
-      &__name{
-        font-size: 16px;
-        font-weight: bold;
-      }
-      &__icons{
-        height: 20px;
-        width: 60px;
-        background-color: #253141;
-        display: flex;
-        justify-content: flex-end;
-        &__icon{
-          padding-left: 5px;
-        a{
-          color: #ffffff;
-        }
-        }
-      }
-    }
   }
-  &__group-list{
-    background-color: #2f3e51;
-    height: calc(100vh - 100px);
-    width: 300px;
-    &__group{
-      height: 91px;
-      font-weight: bold;
-      color:#ffffff;
-      &__name{
-        font-size: 15px;
-        padding: 20px 20px 5px;
-      }
-      &__new-message{
-        font-size: 11px;
-        padding: 0 20px 40px;
-      }
+}
+
+.top-items{
+  background-color: #253141;
+  height: 20px;
+  width: 260px;
+  margin: 0 auto;
+  display:flex;
+  justify-content: space-between;
+  line-height: 20px;
+  &__user-name{
+    font-size: 16px;
+    font-weight: bold;
+  }
+  &__icons{
+    height: 20px;
+    width: 60px;
+    background-color: #253141;
+    display: flex;
+    justify-content: flex-end;
+    .icon{
+      padding-left: 5px;
+    a{
+      color: #ffffff;
+    }
     }
   }
 }
 
-
+.group-list{
+  background-color: #2f3e51;
+  height: calc(100vh - 100px);
+  width: 300px;
+  &__group{
+    height: 91px;
+    font-weight: bold;
+    color:#ffffff;
+    .group-name{
+      font-size: 15px;
+      padding: 20px 20px 5px;
+    }
+    .new-message{
+      font-size: 11px;
+      padding: 0 20px 40px;
+    }
+  }
+}
 
 
 .chat-main{
   background-color: #ffffff;
   height: 100vh;
   width: calc(100vw - 300px);
-  &__group-info{
-    background-color: #ffffff;
-    border-bottom:1px #eeeeee solid;
-    height: 100px;
-    display:flex;
-    justify-content: space-between;
-    padding: 0 40px;
-    &__left-box{
-      &__group-name{
-        padding-top:35px;
-        padding-bottom: 15px;
-        color:#333333;
-        font-size: 20px;
-      }
-    &__members{
-      &__member{
-        font-size: 12px;
-        color: #999999;
-      }
-    }
-    }
-    &__right{
-      &__btn{
-        height: 40px;
-        width: 72px;
-        border: 1px solid #38aef0;
-        padding: 0 20px;
-        text-align: center;
-        line-height: 40px;
-        margin: 28px 0 ;
-        color:#38aef0;
-        font-size: 16px;
-      }
-    }
-  }
-  &__message-list{
-    background-color: #fafafa;
-    height: calc(100vh - 190px);
-    &__message{
-      padding: 35px 0 0 40px;
-      &__user{
-        display: flex;
-        &__name{
-          color: #333333;
-          font-size: 16px;
-          padding-right: 5px;
-        }
-        &__time{
-          font-size: 12px;
-          color: #999999;
-        }
-      }
-      &__text{
-        font-size: 14px;
-        color: #434a54;
-        padding-top: 12px;
-        padding-bottom: 11px;
-      }
-    }
-  }
-  &__message-form{
-    background-color: #d2d2d2;
-    height: 190px;
+}
+
+.main-header{
+  background-color: #ffffff;
+  border-bottom:1px #eeeeee solid;
+  height: 100px;
+  display:flex;
+  justify-content: space-between;
+  padding: 0 40px;
+}
+
+.left-contents{
+  .group-name{
+    padding-top:35px;
+    padding-bottom: 15px;
+    color:#333333;
+    font-size: 20px;
   }
 }
+
+.members{
+  .group-member{
+    font-size: 12px;
+    color: #999999;
+  }
+}
+
+.right-content{
+  &__btn{
+    height: 40px;
+    width: 72px;
+    border: 1px solid #38aef0;
+    padding: 0 20px;
+    text-align: center;
+    line-height: 40px;
+    margin: 28px 0 ;
+    color:#38aef0;
+    font-size: 16px;
+  }
+}
+
+.message-list{
+  background-color: #fafafa;
+  height: calc(100vh - 190px);
+}
+
+.message{
+  padding: 35px 0 0 40px;
+  &__user{
+    display: flex;
+    &__name{
+      color: #333333;
+      font-size: 16px;
+      padding-right: 5px;
+    }
+    &__time{
+      font-size: 12px;
+      color: #999999;
+    }
+  }
+  &__text{
+    font-size: 14px;
+    color: #434a54;
+    padding-top: 12px;
+    padding-bottom: 11px;
+  }
+}
+
+form{
+  background-color: #d2d2d2;
+  height: 90px;
+  padding: 20px 40px;
+  &__new{
+    &__input-box{
+      &__message{
+        height: 50px;
+        width: 100%;
+        padding: 0 10px;
+      }
+    }
+  }
+}
+
 
 a{
   text-decoration: none;
