--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -18,8 +18,11 @@
         %p.message__user__name masa
         %p.message__user__time 2019/11/20(Wed) 17:43:34
       .message__text 今日は夜から雨
-  .chat-main__form
-    %form.chat-main__form__new
-      .chat-main__form__new__input-box
-        %input.chat-main__form__new__input-box__message{:placeholder => "type a message", :type => "text"}
-          %input{:accept => "image/*", :type => "file"}
+  .form
+    %form.send-message
+      .input-box
+        %input{:placeholder => "type a message", :type => "text", :class => "new-message"}
+        %label.select-image
+          = icon('far', 'image')
+          %input{:accept => "image/*", :type => "file", :class => "hiding"}
+      %input{:type => "submit", :value => "Send", :class => "send-btn"}
