--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,13 +2,13 @@
   .side-header
     .top-items
       .top-items__user-name
-        masa
+        = current_user.name
       %ul.top-items__icons
         %li.icon
           = link_to "#", class: "icon--create-group" do
             = icon('far', 'edit')
         %li.icon
-          = link_to "#", class: "icon--setting" do
+          = link_to edit_user_path(current_user), class: "icon--setting" do
             = icon('fas', 'cog')
   .group-list
     = link_to "#" do
