--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,9 +12,9 @@
             = icon('fas', 'cog')
   .group-list
     - current_user.groups.each do |group|
-      = link_to "#" do
+      = link_to group_messages_path(group) do
         .group-list__group
           .group-name
             = group.name
-          .new-message まだメッセージがありません
-
+          .new-message
+            = group.show_last_message
