--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -95,10 +95,17 @@ $light-blue: #38aef0;
   }
 }
 
-.members{
-  .group-member{
-    font-size: 12px;
-    color: #999999;
+.member-box{
+  font-size: 12px;
+  color: #999999;
+  display:flex;
+  .member{
+    padding-right: 5px;
+  }
+  .members{
+    .group-member{
+      font-size: 12px;
+    }
   }
 }
 
@@ -119,6 +126,8 @@ $light-blue: #38aef0;
 .message-list{
   background-color: #fafafa;
   height: calc(100vh - 190px);
+  overflow: auto;
+  margin: 0 auto;
 }
 
 .message{
@@ -135,7 +144,7 @@ $light-blue: #38aef0;
       color: #999999;
     }
   }
-  &__text{
+  &__content{
     font-size: 14px;
     color: #434a54;
     padding-top: 12px;
@@ -148,17 +157,18 @@ $light-blue: #38aef0;
   height: 90px;
   padding: 20px 40px;
   .send-message{
-    display: flex;
-    .input-box{
+    .form-flex{
       display: flex;
-      width: 100%;
-      position: relative;
-      .new-message{
+      .input-box{
         width: 100%;
-        height: 50px;
-        padding: 0 40px 0  10px;
-        color: #434a54;
-        border-style: none;
+        position: relative;
+        .new-message{
+          width: 100%;
+          height: 50px;
+          padding: 0 40px 0  10px;
+          color: #434a54;
+          border-style: none;
+        }
       }
     }
   }
