--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -126,7 +126,7 @@ $light-blue: #38aef0;
 .message-list{
   background-color: #fafafa;
   height: calc(100vh - 190px);
-  overflow: auto;
+  overflow: scroll;
   margin: 0 auto;
 }
 
