--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -6,5 +6,6 @@
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
   .message__content
     - if message.content.present?
-      = message.content
+      %p.message__content-text
+        = message.content
     = image_tag message.image.url, class: 'content__image' if message.image.present?
